rename /seed-user ~> GET /test-user
